@@ -32,7 +32,7 @@ CPlayListM3U::~CPlayListM3U(void)
 {}
 
 
-bool CPlayListM3U::Load(const CStdString& strFileName)
+bool CPlayListM3U::Load(const CStdString& strFileName, bool bDeep)
 {
   char szLine[4096];
   CStdString strLine;
